fixing pre style to be legible

--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -7,4 +7,5 @@ a {
 pre {
     background-color: #00384C;
     border: 1px solid #005C77;
+    color: #ccc;
 }
